[package]
name = "concorde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
serde_json = "1.0.85"
serde = "1.0.144"
tiled = "0.10.2"
iyes_loopless = "0.7.1"
bevy_ecs_ldtk = { version = "0.4.0", features = ["atlas"] }
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] }